@@ -32,6 +32,7 @@ NEXT UNRELEASED
 - Fix links to step not functioning. BZ #1009015
 - Support GIT for distributed sets. BZ #864226
 - Fix Build.PL not handling .mo files. BZ #1016421
+- Bold and Center titlepage edition. BZ #1017548
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
